# MemVisor

./: .gitignore  Cargo.toml  Makefile
src/: app.rs  main.rs  ui.rs  ui_renderer.rs
src/dap/: dap_interface.rs  dap_messenger.rs  message.rs  message_types.rs  mod.rs  requests.rs
src/data/: breakpoints.rs  mod.rs  types.rs
src/widget/: file_picker.rs  mod.rs  source_listing.rs  var_view.rs
