[package]
name = "memvisor"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31"
egui_extras = "0.31"
egui-wgpu = { version = "0.31", features = ["winit"] }
egui-winit = "0.31"
epaint = "0.31"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
thiserror = "2.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.2"
winit = "0.30"
